--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,6 @@ JWT_SECRET=
 EMAIL_USER=
 EMAIL_PASS=
 
-# Firebase Cloud Messaging (FCM)
-FIREBASE_PROJECT_ID=
-FIREBASE_CLIENT_EMAIL=
-FIREBASE_PRIVATE_KEY=
+# Firebase Cloud Messaging (FCM) - Paste full service account JSON as a single line
+FCM_SERVICE_ACCOUNT=
 PUSH_NOTIFICATIONS_ENABLED=true
