--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@ REQUIREMENTS_COMPLIANCE_REPORT.md
 seeder.js
 data/
 frontend-CG
-COMPLETE_CRESCENT_FUNCTIONALITY_ANALYSIS.md
+COMPLETE_CRESCENT_FUNCTIONALITY_ANALYSIS.
+notification-details.csv
